# volk

./: .gitignore  CMakeLists.txt  Makefile  Pipfile  README.md  build.zig  build.zig.zon  defs.h  event.c  event.h  main.c  meson.build  setup.py  volk.c  volk.h
cmd/: main.py
examples/: README.md  __init__.py
examples/bobtail/: app.py  requirements.txt
examples/bobtail/api/templates/: home.jinja2  layout.jinja2
src/: main.zig
volk/: __init__.py  volk.c  volk.pxd  volk.py  volk.pyx
volk/utils/: logging.py
